<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="endBackground"
            type="Integer" />

        <variable
            name="endTitle"
            type="String" />

        <variable
            name="endSubtitle"
            type="String" />
    </data>

    <FrameLayout
        android:id="@+id/end_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{endBackground}"
        tools:context=".views.fragments.EndFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/end_fragment_spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_progress_bar"
                android:indeterminate="true"
                android:indeterminateTint="@{endBackground}"
                android:padding="5dp"
                android:transitionName="@string/controlBtnTransition"
                app:layout_constraintBottom_toTopOf="@+id/x_guideline"
                app:layout_constraintEnd_toStartOf="@+id/y_guideline" />

            <TextView
                android:id="@+id/end_fragment_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@{endTitle}"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/end_fragment_spinner"
                app:layout_constraintStart_toStartOf="@+id/y_guideline"
                app:layout_constraintTop_toTopOf="@+id/end_fragment_spinner"
                tools:text="Action Title" />

            <TextView
                android:id="@+id/end_fragment_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@{endSubtitle}"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/end_fragment_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/end_fragment_title_tv"
                tools:text="Action Subtitle..." />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/x_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/y_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".35" />

            <TextView
                android:id="@+id/end_thank_you_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:fontFamily="monospace"
                android:gravity="center"
                android:lineHeight="30sp"
                android:text="@string/thank_you"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/end_flower_emoji_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/flower_emoji"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_thank_you_tv" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="end_fragment_subtitle_tv,end_fragment_spinner,end_fragment_title_tv"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>