<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/fragment_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.PanelFragment" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <View
                android:id="@+id/panel_fragment_panel_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bg_control_panel"
                android:transitionName="@string/window_decorator_panel_container"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_bottom_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_top_guideline" />

            <View
                android:id="@+id/panel_fragment_poweroff_select_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:alpha="0"
                android:background="@color/controlBtnSelectBg"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintEnd_toStartOf="@id/panel_fragment_right_guideline"
                app:layout_constraintStart_toEndOf="@id/panel_fragment_left_guideline"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_top_guideline" />

            <ImageView
                android:id="@+id/panel_fragment_poweroff_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_power_off"
                android:padding="7dp"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintEnd_toStartOf="@+id/panel_fragment_center_guideline"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_top_guideline"
                app:srcCompat="@drawable/ic_power_off" />

            <View
                android:id="@+id/panel_fragment_poweroff_bg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_power_off"
                android:padding="7dp"
                android:scaleX="0"
                android:scaleY="0"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintEnd_toStartOf="@+id/panel_fragment_center_guideline"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_top_guideline" />

            <View
                android:id="@+id/panel_fragment_reboot_select_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:alpha="0"
                android:background="@color/controlBtnSelectBg"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintEnd_toStartOf="@id/panel_fragment_right_guideline"
                app:layout_constraintStart_toEndOf="@id/panel_fragment_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_poweroff_btn" />

            <ImageView
                android:id="@+id/panel_fragment_reboot_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_reboot"
                android:padding="7dp"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_poweroff_btn"
                app:srcCompat="@drawable/ic_reboot" />

            <View
                android:id="@+id/panel_fragment_reboot_bg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_reboot"
                android:padding="7dp"
                android:scaleX="0"
                android:scaleY="0"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_poweroff_btn" />

            <View
                android:id="@+id/panel_fragment_hibernate_select_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:alpha="0"
                android:background="@color/controlBtnSelectBg"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_airplane_btn"
                app:layout_constraintEnd_toStartOf="@id/panel_fragment_right_guideline"
                app:layout_constraintStart_toEndOf="@id/panel_fragment_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_reboot_btn" />

            <ImageView
                android:id="@+id/panel_fragment_hibernate_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_fullscreen_iv"
                android:padding="7dp"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_airplane_btn"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_reboot_btn"
                app:srcCompat="@drawable/hibernate" />

            <View
                android:id="@+id/panel_fragment_hibernate_bg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_fullscreen_iv"
                android:padding="7dp"
                android:scaleX="0"
                android:scaleY="0"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_airplane_btn"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_reboot_btn" />

            <View
                android:id="@+id/panel_fragment_airplane_select_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:alpha="0"
                android:background="@color/controlBtnSelectBg"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_volumes_divider"
                app:layout_constraintEnd_toStartOf="@id/panel_fragment_right_guideline"
                app:layout_constraintStart_toEndOf="@id/panel_fragment_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_hibernate_btn" />

            <ImageView
                android:id="@+id/panel_fragment_airplane_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_airplane_iv"
                android:padding="7dp"
                app:layout_constraintBottom_toTopOf="@id/panel_fragment_volumes_divider"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_hibernate_btn"
                app:srcCompat="@drawable/ic_airplanemode" />

            <View
                android:id="@+id/panel_fragment_airplane_bg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_airplane_iv"
                android:padding="7dp"
                android:scaleX="0"
                android:scaleY="0"
                app:layout_constraintBottom_toTopOf="@id/panel_fragment_volumes_divider"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_hibernate_btn" />

            <TextView
                android:id="@+id/panel_fragment_poweroff_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:text="@string/power_off"
                android:textColor="@color/fontPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintStart_toEndOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_poweroff_btn" />

            <TextView
                android:id="@+id/panel_fragment_reboot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reboot"
                android:textColor="@color/fontPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_reboot_btn"
                app:layout_constraintStart_toEndOf="@+id/panel_fragment_poweroff_btn"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_poweroff_title"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_reboot_btn" />

            <TextView
                android:id="@+id/panel_fragment_hibernate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hibernate"
                android:textColor="@color/fontPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_reboot_title"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_hibernate_btn" />

            <TextView
                android:id="@+id/panel_fragment_airplane_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airplane"
                android:textColor="@color/fontPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_airplane_btn"
                app:layout_constraintStart_toEndOf="@+id/panel_fragment_hibernate_btn"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_hibernate_title"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_airplane_btn" />

            <TextView
                android:id="@+id/panel_fragment_airplane_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/airplane_mode_subtitle"
                android:textSize="8sp"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_airplane_title"
                app:layout_constraintTop_toBottomOf="@+id/panel_fragment_airplane_title" />

            <View
                android:id="@+id/panel_fragment_volumes_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/panelSeparator"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_vibrate_btn"
                app:layout_constraintEnd_toEndOf="@+id/panel_fragment_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_left_guideline" />

            <ImageView
                android:id="@+id/panel_fragment_volume_off_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_volume"
                android:padding="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_vibrate_btn"
                app:layout_constraintEnd_toStartOf="@+id/panel_fragment_center_guideline"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_left_guideline"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_vibrate_btn"
                app:srcCompat="@drawable/ic_volume_off" />

            <ImageView
                android:id="@+id/panel_fragment_vibrate_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_vibration"
                android:padding="7dp"
                app:layout_constraintBottom_toTopOf="@+id/panel_fragment_bottom_guideline"
                app:layout_constraintEnd_toStartOf="@+id/panel_fragment_volume_on_btn"
                app:layout_constraintStart_toEndOf="@+id/panel_fragment_volume_off_btn"
                app:srcCompat="@drawable/ic_vibration" />

            <ImageView
                android:id="@+id/panel_fragment_volume_on_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_volume"
                android:padding="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/panel_fragment_vibrate_btn"
                app:layout_constraintEnd_toStartOf="@+id/panel_fragment_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/panel_fragment_center_guideline"
                app:layout_constraintTop_toTopOf="@+id/panel_fragment_vibrate_btn"
                app:srcCompat="@drawable/ic_volume_on" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/panel_fragment_top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="183dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/panel_fragment_bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/panel_fragment_left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/panel_fragment_right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/panel_fragment_center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>